# codebase-agent

./: .env  .gitignore  README.md  pyproject.toml
scripts/: draft_agent.py  simple_llm_call.py
src/: main.py
src/agent/: core.py  tools.py  utils.py
src/agent/config/: prompts.py  settings.py
src/craft_code/: cli.py  core.py  tools.py  utils.py
src/craft_code/config/: loader.py
src/craft_code/tui/: app.py  widgets.py
