[project]
name = "craft-code"
version = "0.1.1"
description = "Craft Code – a local developer assistant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
craft-code = "main:main"
