[project]
name = "craft-code"
version = "0.1.2"
description = "Craft Code – a local developer assistant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.6.1",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
craft-code = "craft_code.cli:main"
